--- a/Dealwheel/Info.plist
+++ b/Dealwheel/Info.plist
@@ -56,6 +56,11 @@
 	</array>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Dealwheel needs access to your location to find deals in your area.</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
